po: update po/es_ES/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/contribute.po
+++ b/po/es_ES/contribute.po
@@ -27,7 +27,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-09-15 18:47+0000\n"
+"PO-Revision-Date: 2016-09-19 01:36+0000\n"
 "Last-Translator: dario hereñu <magallania@gmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
@@ -994,7 +994,7 @@ msgstr "Se debe marcar por lo menos una opción de pago."
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "Please enter a valid number of pledge installments."
-msgstr ""
+msgstr "Por favor ingrese un número válido de cuotas de compromiso."
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "Pledge Installments is required field."
@@ -1099,7 +1099,7 @@ msgstr "La cuenta financiera del tipo \"Cuenta de gastos\" no se ha configurado 
 msgid ""
 "Transaction ID's must be unique. Transaction '%1' already exists in your "
 "database."
-msgstr ""
+msgstr "ID´s de transacciones deben ser únicos. La transacción '%1' ya existe en su base de datos."
 
 #: CRM/Contribute/Form/Contribution.php
 msgid "The contribution record has been saved."
@@ -1107,7 +1107,7 @@ msgstr "La contribución se ha guardado correctamente."
 
 #: CRM/Contribute/Form/Contribution.php
 msgid "Office Credit Card contribution"
-msgstr ""
+msgstr "Contribución de la tarjeta de crédito del departamento"
 
 #: CRM/Contribute/Form/Contribution.php
 msgid "Payment Processor Error"
@@ -1256,13 +1256,13 @@ msgstr "Para deshabilitar la sección de cantidades de contribución, usted nece
 msgid ""
 "You need to enable Separate Membership Payment when online contribution page"
 " is configured for both Membership and Recurring Contribution."
-msgstr ""
+msgstr "Necesita habilitar la opción de Pago separado de membresía cuando la página de contribución en línea está configurada en Contribuciones periódicas y Membresía."
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid ""
 "You cannot enable both Recurring Contributions and Auto-renew memberships on"
 " the same online contribution page."
-msgstr ""
+msgstr "No puede habilitar Contribuciones periódicas y Autorenovación de membresías en la misma página en línea de contribuciones."
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "Please enter the contribution amount label."
@@ -1464,7 +1464,7 @@ msgstr "Por favor, seleccione un perfil para recolectar información de organiza
 msgid ""
 "Profile does not contain the minimum required fields for an On Behalf Of "
 "Organization"
-msgstr ""
+msgstr "Perfil no posee los campos mínimos necesarios para un En nombre de la Organización"
 
 #: CRM/Contribute/Form/ContributionPage/Settings.php
 msgid ""
@@ -1795,7 +1795,7 @@ msgid ""
 "If you would like to add personal message to email please add it here. (If "
 "sending to more then one receipient the same message will be sent to each "
 "contact.)"
-msgstr ""
+msgstr "Si desea agregar un mensaje personal al correo electrónico por favor agréguelo aquí. (Si se envía a más de un destinatario el mismo mensaje será enviado a cada contacto.)"
 
 #: CRM/Contribute/Form/Task/Invoice.php
 msgid "Process Invoice(s)"
@@ -1910,7 +1910,7 @@ msgid ""
 "You have selected the table cell separator, but one or more token fields are"
 " not placed inside a table cell. This would result in invalid HTML, so comma"
 " separators have been used instead."
-msgstr ""
+msgstr "Ha seleccionado el separador de celda de tabla, pero uno o más campos simbólicos no están colocados dentro de una celda de tabla. Esto resultaría en un HTML inválido, por lo que se han utilizado comas como separadores."
 
 #: CRM/Contribute/Form/Task/PDFLetterCommon.php
 msgid "Receipts have been emailed to %1 contributions."
@@ -2112,7 +2112,7 @@ msgstr "acceder a CiviContribute"
 msgid ""
 "Record backend contributions (with edit contributions) and view all "
 "contributions (for visible contacts)"
-msgstr ""
+msgstr "Registrar contribuciones en modo administrador (editar donaciones) y ver todas las contribuciones (de contactos visibles)"
 
 #: CRM/Contribute/Info.php
 msgid "edit contributions"
@@ -2595,7 +2595,7 @@ msgid ""
 "You can specify the number of installments, or you can leave the number of "
 "installments blank if you want to make an open-ended commitment. In either "
 "case, you can choose to cancel at any time."
-msgstr ""
+msgstr "Puede especificar el número de cuotas, o puede dejarlo en blanco si desea proponer un compromiso abierto. En cualquier caso, puede optar por cancelarlo en cualquier momento."
 
 #: templates/CRM/Contribute/Form/Contribution/Main.tpl
 msgid "You will receive an email receipt for each recurring contribution."
@@ -2744,13 +2744,13 @@ msgstr "Recibirá un recibo por correo electrónico que incluye información sob
 msgid ""
 "This recurring contribution will be automatically processed every %1 %2s for"
 " a total %3 installments (including this initial contribution)."
-msgstr ""
+msgstr "La contribución periódica será procesada automaticamente cada %1 %2s de un total de %3 cuotas (incluyendo esta contribución inicial)"
 
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid ""
 "This recurring contribution will be automatically processed every %1 for a "
 "total %2 installments (including this initial contribution)."
-msgstr ""
+msgstr "La contribución periódica será procesada automáticamente cada %1 de un total de %2 cuotas (incluyendo esta contribución inicial)"
 
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid ""
@@ -3136,13 +3136,13 @@ msgid ""
 "Your site may already have profile(s) which were previously created for this"
 " purpose, in which case you can re-use them for any number of online "
 "contribution pages."
-msgstr ""
+msgstr "Su sitio puede que ya posea perfil(es) que fueron previamente creados con este propósito, en tal caso puede reutilizarlos en cualquiera de las páginas de donaciones en línea."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Custom.hlp
 msgid ""
 "If you haven't already configured custom fields and a profile to collect "
 "data you need for this form, you can create them here using the steps below."
-msgstr ""
+msgstr "Si ya no ha configurado los campos personalizados y un perfil para recolectar información que necesita para este formulario, puede crearlos aquí siguiendo los siguientes pasos."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Custom.hlp
 msgid ""
@@ -3684,7 +3684,7 @@ msgstr "Automáticamente renovar los pagos de membresía (si están habilitados 
 msgid ""
 "NOTE: The text entered here will be used for both TEXT and HTML versions of "
 "receipt emails so we do not recommend including HTML tags / formatting here."
-msgstr ""
+msgstr "NOTA: El texto ingresado aquí será usado en ambas versiones TEXTO y HTML de los correos electrónicos de los destinatarios, por lo tanto no recomendamos incluir etiquetas HTML ni códigos de formato."
 
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.hlp
 msgid "CC Receipts"
@@ -4223,7 +4223,7 @@ msgid ""
 "For each import, you can either INSERT new contribution records, or UPDATE "
 "existing records. You can not do both types of operations in a single import"
 " session."
-msgstr ""
+msgstr "Para cada importación, puede INSERTAR nuevos registros de membresía o ACTUALIZAR los registros existentes. No se puede hacer ambos tipos de operaciones en la misma sesión de importación."
 
 #: templates/CRM/Contribute/Import/Form/DataSource.hlp
 msgid ""
@@ -4286,8 +4286,8 @@ msgid ""
 msgid_plural ""
 "CiviCRM has detected mismatched contribution IDs. These records have not "
 "been Updated."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "CiviCRM ha detectado un ID de donación no coincidente. Este registro no se ha actualizado."
+msgstr[1] "CiviCRM ha detectado ID de donaciones no coincidentes. Estos registros no se han actualizado."
 
 #: templates/CRM/Contribute/Import/Form/Summary.tpl
 msgid ""
@@ -4304,8 +4304,8 @@ msgid_plural ""
 "CiviCRM has detected %count records with conflicting transaction IDs within "
 "this data file or relative to existing contribution records. These records "
 "have not been imported."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "CiviCRM ha detectado un registro con un ID de transacción conflictiva dentro de este archivo de datos o relacionado con actuales registros de contribuciones. Este registro no ha sido importado."
+msgstr[1] "CiviCRM ha detectado %count registros con IDs de transacciones conflictivas dentro de este archivo de datos o relacionado con actuales registros de contribuciones. Estos registros no han sido importados."
 
 #: templates/CRM/Contribute/Import/Form/Summary.tpl
 msgid ""
@@ -4754,7 +4754,7 @@ msgstr "Una inscripción de contribución/ membresía fue hecha en nombre de la 
 msgid ""
 "The information provided matched multiple existing database records based on"
 " the configured Duplicate Matching Rules for your site."
-msgstr ""
+msgstr "La información suministrada coincide con varios registros existentes en una base de datos que está basada en la configuración de\nReglas de Coincidencia de Duplicados perteneciente a su sitio."
 
 #: xml/templates/message_templates/contribution_dupalert_html.tpl
 #: xml/templates/message_templates/contribution_dupalert_text.tpl
@@ -4768,7 +4768,7 @@ msgid ""
 "existing record - Go to \"Contacts >> Find and Merge Duplicate Contacts\". "
 "Use the strict rule for Organizations to find the potential duplicates and "
 "merge them if appropriate."
-msgstr ""
+msgstr "Si cree que este contacto puede ser un duplicado que debe ser fusionado con uno existente - vaya a \"Contactos >> Buscar y fusionar contactos duplicados\". Utilice una regla estricta para encontrar posibles duplicados y combinarlos si corresponde."
 
 #: xml/templates/message_templates/contribution_dupalert_html.tpl
 #: xml/templates/message_templates/contribution_dupalert_text.tpl
@@ -5097,7 +5097,7 @@ msgstr "Contribución en línea:"
 msgid ""
 "This page does not have any price fields configured or you may not have "
 "permission for them. Please contact the site administrator for more details."
-msgstr ""
+msgstr "Esta página no tiene configurado ningún campo precio o puede que no posea permisos para disponerlo. Por favor contáctese con el administrador del sitio para más detalles."
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "You cannot have auto-renewal on if you are paying later."
@@ -5105,12 +5105,12 @@ msgstr "No puede poseer la opción activada de auto-renovación si está pagando
 
 #: CRM/Contribute/Form/Contribution.php
 msgid "Transaction ID for the refund payment"
-msgstr ""
+msgstr "ID de la transacción por un pago de reembolso"
 
 #: CRM/Contribute/Form/Contribution.php
 msgid ""
 "Contribution submitted by a staff person using contributor's credit card"
-msgstr ""
+msgstr "Donación enviada por una persona del equipo usando la tarjeta de crédito del donante"
 
 #: CRM/Contribute/Form/ContributionBase.php
 msgid "Invalid Membership"
@@ -5138,8 +5138,8 @@ msgstr ""
 #: CRM/Contribute/Form/Task/Delete.php
 msgid "1 contribution could not be deleted."
 msgid_plural "%count contributions could not be deleted."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "1 donación no pudo ser eliminada."
+msgstr[1] "%count donaciones no pudieron ser eliminadas."
 
 #: CRM/Contribute/Form/Task/Delete.php
 msgid "1 contribution will not be deleted."
@@ -5160,7 +5160,7 @@ msgid ""
 "The maximum number of contributions you can select for Update multiple "
 "contributions is %1. You have selected %2. Please select fewer contributions"
 " from your search results and try again."
-msgstr ""
+msgstr "El número máximo de contribuciones que puede seleccionar para Actualizar múltiples contribuciones es %1. Ha seleccionado %2. Por favor, seleccione menos contribuciones de sus resultados de búsqueda e inténtelo nuevamente."
 
 #: CRM/Contribute/Form/Task/PickProfile.php
 msgid ""
@@ -5175,20 +5175,20 @@ msgstr ""
 msgid ""
 "Payment Method should be Check when a check number is entered for a "
 "contribution."
-msgstr ""
+msgstr "Método de pago debe ser Cheque cuando un número de cheque es ingresado como contribución."
 
 #: CRM/Contribute/Form/UpdateSubscription.php
 msgid ""
 "There is no valid processor for this subscription so it cannot be edited."
-msgstr ""
+msgstr "No existe una unidad de proceso válida para esta suscripción por lo tanto no puede ser editada."
 
 #: CRM/Contribute/Form/UpdateSubscription.php
 msgid "Recurring Contribution Updated - increased installment amount"
-msgstr ""
+msgstr "Donaciones periódicas actualizados - aumentar cantidad de cuotas"
 
 #: CRM/Contribute/Form/UpdateSubscription.php
 msgid "Recurring Contribution Updated - decreased installment amount"
-msgstr ""
+msgstr "Donaciones periódicas actualizados - disminuir cantidad de cuotas"
 
 #: CRM/Contribute/Task.php
 msgid "Export contributions"
@@ -5196,7 +5196,7 @@ msgstr "Exportar contribuciones"
 
 #: CRM/Contribute/Task.php
 msgid "Update pending contribution status"
-msgstr ""
+msgstr "Actualizar el estado de donaciones pendientes"
 
 #: CRM/Contribute/Task.php
 msgid "Receipts - print or email"
@@ -5218,7 +5218,7 @@ msgstr "Sin pagos encontrados para este %1 registro"
 msgid ""
 "Use this form to submit a new contribution on behalf of %1. <strong>A\n"
 "        %2 transaction will be submitted</strong> using the selected payment processor."
-msgstr ""
+msgstr "Utilice este formulario para enviar una nueva contribución en nombre de %1. <strong>Una \n%2 transacción será procesada</strong> usando el procesador de pago seleccionado."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Custom.hlp
 msgid "Contributor Profiles"
