--- a/po/ca_ES/admin.po
+++ b/po/ca_ES/admin.po
@@ -16,7 +16,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-09-05 08:30+0000\n"
+"PO-Revision-Date: 2016-09-19 19:23+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -2732,7 +2732,7 @@ msgid ""
 "Changing the Value field will unlink records which have been marked with "
 "this option. This change can not be undone except by restoring the previous "
 "value."
-msgstr ""
+msgstr "Canviar el camp valor comportarà la desvinculació dels registres que s'hagin marcat amb aquesta opció. Aquest canvi no es pot desfer excepte si es restaura el valor anterior."
 
 #: templates/CRM/Admin/Form/Options.tpl
 msgid "Search Title"
@@ -5519,7 +5519,7 @@ msgstr ""
 msgid ""
 "Use Event Types to categorize your events. Event feeds can be filtered by "
 "Event Type and participant searches can use Event Type as a criteria."
-msgstr "Utilitzeu els tipus d'esdeveniments per a categoritzar els vostres esdeveniments. Els canals d'esdeveniments es poden filtar per tipus d'esdeveniments i les cerques de participants poden utilitzar els tipus d'esdeveniments com a criteri."
+msgstr "Utilitzeu els tipus d'esdeveniments per a categoritzar els vostres esdeveniments. Els canals d'esdeveniments es poden filtrar per tipus d'esdeveniments i les cerques de participants poden utilitzar els tipus d'esdeveniments com a criteri."
 
 #: templates/CRM/Admin/Page/Options.tpl
 msgid ""
