--- a/po/ka/campaign.po
+++ b/po/ka/campaign.po
@@ -3,12 +3,13 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# maxo kevlishvili <maxuna15@mail.ru>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:10+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-09-20 20:41+0000\n"
+"Last-Translator: maxo kevlishvili <maxuna15@mail.ru>\n"
 "Language-Team: Georgian (http://www.transifex.com/civicrm/civicrm/language/ka/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,15 +19,15 @@ msgstr ""
 
 #: CRM/Campaign/BAO/Campaign.php
 msgid "Current Campaigns"
-msgstr ""
+msgstr "ამჟამინდელი კამპანიები"
 
 #: CRM/Campaign/BAO/Campaign.php
 msgid "Past Campaigns"
-msgstr ""
+msgstr "ბოლო კამპანიები"
 
 #: CRM/Campaign/BAO/Petition.php
 msgid "No survey sid parameter. Cannot process signature."
-msgstr ""
+msgstr "არ არის გამოკითხვის პარამეტრი. არ შეგვიძლია ხელმოწერის პროცედურის გატარება"
 
 #: CRM/Campaign/BAO/Petition.php
 msgid "Petition Id and/or Activity Id is not of the type Positive."
