--- a/po/ka/batch.po
+++ b/po/ka/batch.po
@@ -3,12 +3,13 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# maxo kevlishvili <maxuna15@mail.ru>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-09-20 20:39+0000\n"
+"Last-Translator: maxo kevlishvili <maxuna15@mail.ru>\n"
 "Language-Team: Georgian (http://www.transifex.com/civicrm/civicrm/language/ka/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,39 +19,39 @@ msgstr ""
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Batch %1"
-msgstr ""
+msgstr "ბეჩი %1"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Transactions"
-msgstr ""
+msgstr "ტრანზაქციები"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "View/Add Transactions to Batch"
-msgstr ""
+msgstr "ნახვა/დანატება ტრანზაქციის ბეჩად"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Re-open Batch"
-msgstr ""
+msgstr "თავიდან გახსნა"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Delete Batch"
-msgstr ""
+msgstr "ბაჩის წაშალ"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Download Batch"
-msgstr ""
+msgstr "გადმოიწერე ბაჩი"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Enter records"
-msgstr ""
+msgstr "შეიყვანე ჩანაწერი"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Batch Data Entry"
-msgstr ""
+msgstr "ბეთჩის შეყვანის თარიღი"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Expected Total"
-msgstr ""
+msgstr "გადაცილდა მთლიანს"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "No batches were selected."
