--- a/po/ru_RU/menu.po
+++ b/po/ru_RU/menu.po
@@ -9,6 +9,7 @@
 # semden <mail@semden.info>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Armen <remontall@mail.ru>, 2012
+# Rinat Sadykov <sark@bk.ru>, 2016
 # semden <mail@semden.info>, 2012
 # Val Ye <caesar.ye@gmail.com>, 2014
 # Victor Ilyin <wictinfo@gmail.com>, 2012
@@ -20,8 +21,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-22 18:33+0000\n"
-"Last-Translator: Фёдор Ходьков <fkhodkov@gmail.com>\n"
+"PO-Revision-Date: 2016-09-22 14:21+0000\n"
+"Last-Translator: Rinat Sadykov <sark@bk.ru>\n"
 "Language-Team: Russian (http://www.transifex.com/civicrm/civicrm/language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -159,7 +160,7 @@ msgstr "Назначить другому клиенту"
 
 msgctxt "menu"
 msgid "File on Case"
-msgstr ""
+msgstr "Файл по запросу"
 
 msgctxt "menu"
 msgid "Case Details"
@@ -893,7 +894,7 @@ msgstr "Блог CiviCRM"
 
 msgctxt "menu"
 msgid "CiviCRM Getting Started"
-msgstr ""
+msgstr "Начало работы с CiviCRM"
 
 msgctxt "menu"
 msgid "Case Dashlet"
@@ -1348,7 +1349,7 @@ msgstr "Новости CiviCRM"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Getting Started"
-msgstr ""
+msgstr "Начало"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1623,7 +1624,7 @@ msgstr "Настройка системы"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Connections"
-msgstr ""
+msgstr "Подключения"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1708,12 +1709,12 @@ msgstr "Все отчеты"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Support"
-msgstr ""
+msgstr "Поддержка"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Get started"
-msgstr ""
+msgstr "Начало"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1723,27 +1724,27 @@ msgstr "Документация"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Ask a question"
-msgstr ""
+msgstr "Задать вопрос"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Get expert help"
-msgstr ""
+msgstr "Запросить помощь эксперта"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "About CiviCRM"
-msgstr ""
+msgstr "О CiviCRM"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Register your site"
-msgstr ""
+msgstr "Зарегистрируй свой сайт"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Join CiviCRM"
-msgstr ""
+msgstr "Присоединиться к CiviCRM"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2162,32 +2163,32 @@ msgstr "Детализированный отчет по опросам обще
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Payment Methods"
-msgstr ""
+msgstr "Методы оплаты"
 
 msgctxt "menu"
 msgid "Configure CKEditor"
-msgstr ""
+msgstr "Настроить CKEditor"
 
 msgctxt "menu"
 msgid "Batch Merge Duplicate Contacts"
-msgstr ""
+msgstr "Пакетное объединение дублированных контактов"
 
 msgctxt "menu"
 msgid "Insert CiviCRM Content"
-msgstr ""
+msgstr "Вставить CiviCRM контент"
 
 msgctxt "menu"
 msgid "Self-service Registration Update"
-msgstr ""
+msgstr "Обновление информации на портале самообслуживания"
 
 msgctxt "menu"
 msgid "Self-service Registration Transfer"
-msgstr ""
+msgstr "Передача регистрации по самообслуживанию"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "System Status"
-msgstr ""
+msgstr "Системный статус"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2202,26 +2203,26 @@ msgstr "Расширения"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Activity Details"
-msgstr ""
+msgstr "Детали активности"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Activity Summary"
-msgstr ""
+msgstr "Информация об активности"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Shows activity statistics by type / date"
-msgstr ""
+msgstr "Показать статистику по активностям в разрезе типа/даты"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Pledge Detail"
-msgstr ""
+msgstr "Детали залога"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid ""
 "List of pledges including amount pledged, pledge status, next payment date, "
 "balance due, total amount paid etc."
-msgstr ""
+msgstr "Список залогов, включая суммы объявленных взносов, состояние залога, следующую дату платежа, остаток задолженности, уплаченная сумма и т.п."
