po: update po/sv_SE/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/mailing.po
+++ b/po/sv_SE/mailing.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-15 11:00+0000\n"
+"PO-Revision-Date: 2016-09-26 10:00+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -33,7 +33,7 @@ msgstr "CiviMail skickar inte tom epost. Hoppar över: %1"
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Field \"%1\" is required."
-msgstr ""
+msgstr "Fältet \"%1\" är obligatoriskt."
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Field \"body_html\" or \"body_text\" is required."
