--- a/po/sv_SE/common-base.po
+++ b/po/sv_SE/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-15 09:29+0000\n"
+"PO-Revision-Date: 2016-09-26 13:37+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -4346,8 +4346,8 @@ msgstr[1] ""
 #: CRM/Contact/Form/Task/AddToParentClass.php
 msgid "%count was skipped because the contact is already %2 %3"
 msgid_plural "%count were skipped because the contacts are already %2 %3"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%count hoppades över eftersom kontakten redan var %2 %3"
+msgstr[1] "%count hoppades över eftersom kontakterna redan var %2 %3"
 
 #: CRM/Contact/Form/Task/AddToParentClass.php
 msgid ""
@@ -19043,7 +19043,7 @@ msgid ""
 "Unable to delete the '%1' Price Field - it is currently in use by one or "
 "more active events or contribution pages or contributions  or event "
 "templates."
-msgstr "Kunde inte ta bort avgiftsfältet '%1' - det används för nuvarande av en eller flera aktiva arrangemang eller inbetalningingssidor, inbetalningar eller arrangemangsmallar."
+msgstr "Kunde inte ta bort avgiftsfältet '%1' - det används för nuvarande av en eller flera aktiva arrangemang eller inbetalningssidor, inbetalningar eller arrangemangsmallar."
 
 #: templates/CRM/Price/Page/Field.tpl
 msgid "Add Price Field"
@@ -25626,7 +25626,7 @@ msgstr "Kontakter slogs ihop."
 
 #: CRM/Dedupe/Merger.php
 msgid "Contact(s) were skipped."
-msgstr ""
+msgstr "Kontakt(er) hoppades över."
 
 #: CRM/Dedupe/Merger.php
 msgid "Contact ID %1 has been merged into Contact ID %2 and deleted."
