--- a/po/es_ES/financial.po
+++ b/po/es_ES/financial.po
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-09-20 07:49+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2016-09-28 08:16+0000\n"
+"Last-Translator: Adrian Torralba Roman <adriantorralba@hotmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -44,7 +44,7 @@ msgstr "Última modificación Realizada Por:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Payment Instrument:"
-msgstr "Forma de pago:"
+msgstr "Instrumento de pago:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Batch"
