--- a/po/es_ES/mailing.po
+++ b/po/es_ES/mailing.po
@@ -30,8 +30,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-09-16 20:30+0000\n"
-"Last-Translator: dario hereñu <magallania@gmail.com>\n"
+"PO-Revision-Date: 2016-09-28 08:15+0000\n"
+"Last-Translator: Adrian Torralba Roman <adriantorralba@hotmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
