po: update po/fi_FI/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fi_FI/admin.po
+++ b/po/fi_FI/admin.po
@@ -7,12 +7,13 @@
 # Tomi Toivio <tomi@flossmanuals.net>, 2013
 # Tomi Toivio <tomi@sange.fi>, 2013
 # Tomi Toivio <tomi@sange.fi>, 2013
+# Ville Korhonen <ville@xd.fi>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:37+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-09-29 13:31+0000\n"
+"Last-Translator: Ville Korhonen <ville@xd.fi>\n"
 "Language-Team: Finnish (http://www.transifex.com/civicrm/civicrm/language/fi/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -62,15 +63,15 @@ msgstr "Asenna"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Install \"%1\"?"
-msgstr ""
+msgstr "Asenna \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Download and Install"
-msgstr ""
+msgstr "Lataa ja asenna"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Download and Install \"%1\"?"
-msgstr ""
+msgstr "Lataa ja asenna \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php CRM/Admin/Page/Extensions.php
 msgid "Uninstall"
@@ -78,19 +79,19 @@ msgstr "Poista"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Uninstall \"%1\"?"
-msgstr ""
+msgstr "Poista \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Enable \"%1\"?"
-msgstr ""
+msgstr "Ota käyttöön \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Disable \"%1\"?"
-msgstr ""
+msgstr "Poista käytöstä \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Uninstalled"
-msgstr ""
+msgstr "Laajennos poistettu"
 
 #: CRM/Admin/Form/Extensions.php
 msgid ""
@@ -100,7 +101,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Uninstall Error"
-msgstr ""
+msgstr "Virhe poistettaessa"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Installed"
@@ -174,11 +175,11 @@ msgstr ""
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Sheet Size"
-msgstr ""
+msgstr "Sivun koko"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Sheet Size (w x h)"
-msgstr ""
+msgstr "Sivun koko (l x k)"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Label Width"
@@ -246,7 +247,7 @@ msgstr "Sijaintityyppi '%1' on tallennettu."
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Mail Account"
-msgstr ""
+msgstr "Sähköpostitili"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Email Domain"
@@ -756,7 +757,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Display.php
 msgid "Input Format"
-msgstr ""
+msgstr "Syöttömuoto"
 
 #: CRM/Admin/Form/Preferences/Event.php
 msgid "CiviEvent Component Settings"
@@ -788,7 +789,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Event.php
 msgid "show all"
-msgstr ""
+msgstr "näytä kaikki"
 
 #: CRM/Admin/Form/Preferences/Mailing.php
 msgid "CiviMail Component Settings"
@@ -971,7 +972,7 @@ msgstr "Kontakti-ID A:sta B:hen."
 #: CRM/Admin/Form/RelationshipType.php
 #: templates/CRM/Admin/Page/RelationshipType.tpl
 msgid "All Contacts"
-msgstr ""
+msgstr "Kaikki kontaktit"
 
 #: CRM/Admin/Form/RelationshipType.php
 msgid "Selected Relationship type has been deleted."
@@ -983,7 +984,7 @@ msgstr "Kontaktityyppi on tallennettu."
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Send email"
-msgstr ""
+msgstr "Lähetä sähköposti"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Record activity for automated email"
@@ -991,7 +992,7 @@ msgstr ""
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Send email or SMS"
-msgstr ""
+msgstr "Lähetä sähköposti tai tekstiviesti (SMS)"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Record activity for automated email or SMS"
@@ -1091,11 +1092,11 @@ msgstr "Komponentit"
 
 #: CRM/Admin/Form/Setting/Component.php
 msgid "Enable >>"
-msgstr ""
+msgstr "Ota käyttöön >>"
 
 #: CRM/Admin/Form/Setting/Component.php
 msgid "<< Disable"
-msgstr ""
+msgstr "<< Poista käytöstä"
 
 #: CRM/Admin/Form/Setting/Component.php
 msgid "You need to enable CiviContribute before enabling CiviPledge."
@@ -1178,15 +1179,15 @@ msgstr "Kytke päälle Useat kielet"
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Inherit CMS Language"
-msgstr ""
+msgstr "Noudata sisällönhallintajärjestelmän (CMS) kieliasetusta"
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Thousands Separator"
-msgstr ""
+msgstr "Tuhaterotin"
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Decimal Delimiter"
-msgstr ""
+msgstr "Desimaalierotin"
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Monetary Amount Display"
@@ -1214,11 +1215,11 @@ msgstr ""
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Default Currency"
-msgstr ""
+msgstr "Oletusvaluutta"
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Available Currencies"
-msgstr ""
+msgstr "Saatavilla olevat valuutat"
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Legacy Encoding"
@@ -1363,11 +1364,11 @@ msgstr ""
 
 #: CRM/Admin/Form/Setting/Path.php
 msgid "Temporary Files"
-msgstr ""
+msgstr "Väliaikaiset tiedostot"
 
 #: CRM/Admin/Form/Setting/Path.php
 msgid "Images"
-msgstr ""
+msgstr "Kuvat"
 
 #: CRM/Admin/Form/Setting/Path.php
 msgid "Custom Files"
@@ -1427,19 +1428,19 @@ msgstr ""
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "mail()"
-msgstr ""
+msgstr "mail()"
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "SMTP"
-msgstr ""
+msgstr "SMTP"
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Sendmail"
-msgstr ""
+msgstr "Sendmail"
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Disable Outbound Email"
-msgstr ""
+msgstr "Poista lähtevä sähköposti käytöstä"
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Redirect to Database"
@@ -1584,7 +1585,7 @@ msgstr "Pakota turvalliset URL-osoitteet (SSL)"
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid "Verify SSL Certs"
-msgstr ""
+msgstr "Tarkista SSL-sertifikaatit"
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid ""
@@ -1628,7 +1629,7 @@ msgstr ""
 
 #: CRM/Admin/Form/WordReplacements.php
 msgid "Settings Saved"
-msgstr ""
+msgstr "Asetukset tallennettu"
 
 #: CRM/Admin/Page/AJAX.php
 msgid "This profile is currently used for %1."
@@ -1850,15 +1851,15 @@ msgstr "Muokkaa kontaktityyppiä"
 
 #: CRM/Admin/Page/ContactType.php
 msgid "Disable Contact Type"
-msgstr ""
+msgstr "Poista kontaktityyppi käytöstä"
 
 #: CRM/Admin/Page/ContactType.php
 msgid "Enable Contact Type"
-msgstr ""
+msgstr "Ota kontaktityyppi käyttöön"
 
 #: CRM/Admin/Page/ContactType.php
 msgid "Delete Contact Type"
-msgstr ""
+msgstr "Poista kontaktityyppi"
 
 #: CRM/Admin/Page/Extensions.php
 msgid "Uninstall Extension"
@@ -1866,7 +1867,7 @@ msgstr "Poista laajennus"
 
 #: CRM/Admin/Page/Extensions.php
 msgid "Download Extension"
-msgstr ""
+msgstr "Lataa laajennos"
 
 #: CRM/Admin/Page/Extensions.php
 msgid "Disabled (Missing)"
@@ -1878,11 +1879,11 @@ msgstr ""
 
 #: CRM/Admin/Page/ExtensionsUpgrade.php
 msgid "Database Upgrades"
-msgstr ""
+msgstr "Tietokantapäivitykset"
 
 #: CRM/Admin/Page/Job.php
 msgid "View Job Log"
-msgstr ""
+msgstr "Näytä tehtäväloki"
 
 #: CRM/Admin/Page/Job.php
 msgid "See log entries for this Scheduled Job"
@@ -1894,7 +1895,7 @@ msgstr ""
 
 #: CRM/Admin/Page/Job.php
 msgid "Execute Now"
-msgstr ""
+msgstr "Suorita nyt"
 
 #: CRM/Admin/Page/Job.php
 msgid "Execute Scheduled Job Now"
@@ -2055,11 +2056,11 @@ msgstr "Hallitse ACL rooleja"
 
 #: CRM/Admin/Page/Options.php
 msgid "Run"
-msgstr ""
+msgstr "Suorita"
 
 #: CRM/Admin/Page/Options.php
 msgid "Run %1"
-msgstr ""
+msgstr "Suorita %1"
 
 #: CRM/Admin/Page/ParticipantStatusType.php
 msgid "Delete Status"
