--- a/po/fi_FI/common-base.po
+++ b/po/fi_FI/common-base.po
@@ -16,13 +16,14 @@
 # Tomi Toivio <tomi@flossmanuals.net>, 2013
 # Tomi Toivio <tomi@sange.fi>, 2013
 # Tomi Toivio <tomi@sange.fi>, 2013
+# Ville Korhonen <ville@xd.fi>, 2016
 # Antti Kuosmanen <antti@seravo.fi>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:36+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-09-29 13:27+0000\n"
+"Last-Translator: Ville Korhonen <ville@xd.fi>\n"
 "Language-Team: Finnish (http://www.transifex.com/civicrm/civicrm/language/fi/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -386,7 +387,7 @@ msgstr "Valittu käyttäjäluokka on tuhottu."
 #: templates/CRM/Contact/Page/View/CustomData.tpl
 #: templates/CRM/Custom/Page/CustomDataView.tpl
 msgid "Record Deleted"
-msgstr ""
+msgstr "Tietue poistettu"
 
 #: CRM/ACL/Form/ACLBasic.php
 msgid "ACL Type"
@@ -849,7 +850,7 @@ msgstr "Toiminta on roskakorissa"
 #: CRM/Activity/DAO/Activity.php CRM/Core/BAO/UFField.php
 #: CRM/UF/Form/Field.php templates/CRM/Activity/Form/ActivityView.tpl
 msgid "Campaign"
-msgstr ""
+msgstr "Kampanja"
 
 #: CRM/Activity/DAO/Activity.php xml/templates/civicrm_data.tpl
 msgid "Engagement Index"
@@ -1082,7 +1083,7 @@ msgstr ""
 #: CRM/SMS/Form/Group.php CRM/SMS/Form/Schedule.php CRM/Tag/Form/Tag.php
 #: js/Common.js js/crm.ajax.js templates/CRM/Contact/Page/View/Summary.js
 msgid "Saved"
-msgstr ""
+msgstr "Tallennettu"
 
 #: CRM/Activity/Form/ActivityFilter.php CRM/Core/SelectValues.php
 msgid "Include"
@@ -1159,7 +1160,7 @@ msgstr ""
 
 #: CRM/Activity/Form/Task/Batch.php CRM/Contact/Form/Task/Batch.php
 msgid "Updates Saved"
-msgstr ""
+msgstr "Muutokset tallennettu"
 
 #: CRM/Activity/Form/Task/Batch.php
 msgid "No Updates Saved"
@@ -1192,7 +1193,7 @@ msgstr[1] ""
 #: js/jquery/jquery.crmeditable.js js/view/crm.designer.js
 #: templates/CRM/UF/Form/Field.tpl
 msgid "Error"
-msgstr ""
+msgstr "Virhe"
 
 #: CRM/Activity/Form/Task/FileOnCase.php CRM/Activity/Selector/Activity.php
 #: CRM/Activity/Task.php templates/CRM/Activity/Form/Activity.tpl
@@ -1849,7 +1850,7 @@ msgstr ""
 
 #: CRM/Contact/BAO/Contact.php
 msgid "Image Deleted"
-msgstr ""
+msgstr "Kuva poistettu"
 
 #: CRM/Contact/BAO/Contact.php CRM/Core/BAO/UFGroup.php CRM/UF/Form/Field.php
 #: CRM/UF/Page/Field.php templates/CRM/Contact/Form/Search/Criteria/Basic.tpl
@@ -2299,11 +2300,11 @@ msgstr "JA"
 
 #: CRM/Contact/BAO/Query.php
 msgid "greater than"
-msgstr ""
+msgstr "suurempi kuin"
 
 #: CRM/Contact/BAO/Query.php
 msgid "less than"
-msgstr ""
+msgstr "pienempi kuin"
 
 #: CRM/Contact/BAO/Query.php
 #: CRM/Contact/Form/Search/Custom/FullText/Contribution.php
@@ -2746,11 +2747,11 @@ msgstr ""
 
 #: CRM/Contact/DAO/Relationship.php
 msgid "Contact A"
-msgstr ""
+msgstr "Kontakti A"
 
 #: CRM/Contact/DAO/Relationship.php
 msgid "Contact B"
-msgstr ""
+msgstr "Kontakti B"
 
 #: CRM/Contact/DAO/Relationship.php CRM/Contact/Form/Relationship.php
 #: CRM/Contact/Form/Search/Criteria.php
@@ -2761,19 +2762,19 @@ msgstr "Yhteyden muoto"
 
 #: CRM/Contact/DAO/Relationship.php
 msgid "Relationship Start Date"
-msgstr ""
+msgstr "Yhteyden alkupäivämäärä"
 
 #: CRM/Contact/DAO/Relationship.php
 msgid "Relationship End Date"
-msgstr ""
+msgstr "Yhteyden päättymispäivämäärä"
 
 #: CRM/Contact/DAO/Relationship.php
 msgid "Relationship Is Active"
-msgstr ""
+msgstr "Yhteys on aktiivinen"
 
 #: CRM/Contact/DAO/Relationship.php CRM/Contact/DAO/RelationshipType.php
 msgid "Relationship Description"
-msgstr ""
+msgstr "Yhteyden kuvaus"
 
 #: CRM/Contact/DAO/Relationship.php
 msgid "Contact A has Permission Over Contact B"
@@ -2955,7 +2956,7 @@ msgstr ""
 
 #: CRM/Contact/Form/Contact.php CRM/Contact/Form/RelatedContact.php
 msgid "Contact Saved"
-msgstr ""
+msgstr "Kontakti tallennettu"
 
 #: CRM/Contact/Form/Contact.php CRM/Profile/Form.php
 msgid "One matching contact was found. "
@@ -3019,7 +3020,7 @@ msgstr ""
 
 #: CRM/Contact/Form/CustomData.php
 msgid "Save a Copy"
-msgstr ""
+msgstr "Tallenna kopio"
 
 #: CRM/Contact/Form/DedupeFind.php
 msgid "- All Contacts -"
@@ -3201,7 +3202,7 @@ msgstr "Käytä toisen kontaktin osoitetta"
 
 #: CRM/Contact/Form/Edit/Address.php
 msgid "Share With"
-msgstr ""
+msgstr "Jaa"
 
 #: CRM/Contact/Form/Edit/Address.php
 msgid "Please select valid shared contact or a contact with valid address."
@@ -3441,7 +3442,7 @@ msgstr "Sinulla ei ole pääsyä tälle sivulle"
 
 #: CRM/Contact/Form/Merge.php
 msgid "Cannot merge a contact with itself."
-msgstr ""
+msgstr "Kontaktia ei voi yhdistää itsensä kanssa"
 
 #: CRM/Contact/Form/Merge.php
 msgid ""
@@ -3498,7 +3499,7 @@ msgstr ""
 
 #: CRM/Contact/Form/Merge.php
 msgid "Contacts Merged"
-msgstr ""
+msgstr "Kontaktit yhdistetty"
 
 #: CRM/Contact/Form/Merge.php
 msgid "Contact ID %1 has been merged and deleted."
@@ -21515,7 +21516,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Activity Report"
-msgstr "Aktiivisuus raportti"
+msgstr "Aktiivisuusraportti"
 
 #: xml/templates/civicrm_data.tpl
 msgid ""
