--- a/po/de_DE/admin.po
+++ b/po/de_DE/admin.po
@@ -38,8 +38,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-09-17 14:07+0000\n"
-"Last-Translator: Hubert Baumann <baumann.hubert.jun@gmail.com>\n"
+"PO-Revision-Date: 2016-09-30 06:39+0000\n"
+"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -723,7 +723,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Automatically email invoice when user purchases online"
-msgstr ""
+msgstr "Bei Online-Zahlungen Rechnung automatisch verschicken"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Tax Term"
