--- a/po/de_DE/common-base.po
+++ b/po/de_DE/common-base.po
@@ -49,8 +49,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-16 08:46+0000\n"
-"Last-Translator: Ettore Atalan <atalanttore@googlemail.com>\n"
+"PO-Revision-Date: 2016-09-30 06:43+0000\n"
+"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -21439,7 +21439,7 @@ msgstr "Zugeordnete Aktivitäten"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Invoices / Credit Notes"
-msgstr ""
+msgstr "Rechnungen / Rückerstattungen"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Street Address Parsing"
@@ -23235,7 +23235,7 @@ msgstr "Zahlungsbeleg für eine Zuwendung (on-line)"
 
 #: xml/templates/civicrm_msg_template.tpl
 msgid "Contributions - Invoice"
-msgstr ""
+msgstr "Zuwendungen - Rechnung"
 
 #: xml/templates/civicrm_msg_template.tpl
 msgid "Contributions - Recurring Start and End Notification"
