--- a/po/de_DE/mailing.po
+++ b/po/de_DE/mailing.po
@@ -8,7 +8,7 @@
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011,2014
 # Bernhard Heß <dr.bernhard.hess@t-online.de>, 2012-2013
 # Ettore Atalan <atalanttore@googlemail.com>, 2015-2016
-# Fabian <schuttenberg@systopia.de>, 2013-2015
+# Fabian <schuttenberg@systopia.de>, 2013-2016
 # Finn F <ffmoto95@gmail.com>, 2016
 # Freddy Koschinsky <schollator@burning.name>, 2013
 # Frederik Bugglin <frederik.bugglin@gmail.com>, 2016
@@ -30,8 +30,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-26 07:15+0000\n"
-"Last-Translator: tosca <peter.wenzel@wienertafel.at>\n"
+"PO-Revision-Date: 2016-09-30 07:15+0000\n"
+"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1726,7 +1726,7 @@ msgstr ""
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Reports for  '%1'"
-msgstr ""
+msgstr "Berichte zu  '%1'"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Opens (WIP)"
@@ -1754,7 +1754,7 @@ msgstr ""
 
 #: ang/crmMailingAB/ListCtrl.html
 msgid "- Status -"
-msgstr ""
+msgstr "- Status -"
 
 #: ang/crmMailingAB/ListCtrl.html
 msgid "- Test Type -"
@@ -2612,7 +2612,7 @@ msgstr ""
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Click-Throughs"
-msgstr ""
+msgstr "Klickraten"
 
 #: ang/crmMailing/BlockTracking.html
 msgid "Track Click-Throughs"
@@ -2627,7 +2627,7 @@ msgstr ""
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Reports for '%1'"
-msgstr ""
+msgstr "Berichte zu '%1'"
 
 #: templates/CRM/Mailing/MailingUI.hlp
 msgid ""
