--- a/po/de_DE/contribute.po
+++ b/po/de_DE/contribute.po
@@ -26,8 +26,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-16 08:48+0000\n"
-"Last-Translator: Ettore Atalan <atalanttore@googlemail.com>\n"
+"PO-Revision-Date: 2016-09-30 06:43+0000\n"
+"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1771,7 +1771,7 @@ msgstr ""
 #: CRM/Contribute/Form/Task/Invoice.php
 #: templates/CRM/Contribute/Form/ContributionView.tpl
 msgid "Email Invoice"
-msgstr ""
+msgstr "Rechnung per E-Mail schicken"
 
 #: CRM/Contribute/Form/Task/Invoice.php
 msgid "Print Contribution Invoice"
@@ -1779,7 +1779,7 @@ msgstr "Rechnung für Zuwendung drucken"
 
 #: CRM/Contribute/Form/Task/Invoice.php
 msgid "PDF Invoice"
-msgstr ""
+msgstr "PDF-Rechnungen erzeugen"
 
 #: CRM/Contribute/Form/Task/Invoice.php CRM/Contribute/Form/Task/PDF.php
 msgid "Selection required"
@@ -2278,7 +2278,7 @@ msgstr "Dankesbriefe für Zuwendungen"
 
 #: CRM/Contribute/Task.php
 msgid "Print or Email Contribution Invoices"
-msgstr ""
+msgstr "Rechnungen für oder per E-Mail versenden"
 
 #: templates/CRM/Contribute/Form/AcceptCreditCard.tpl
 msgid "New Credit Card"
@@ -3814,12 +3814,12 @@ msgstr ""
 #: templates/CRM/Contribute/Form/ContributionView.tpl
 #: templates/CRM/Contribute/Page/UserDashboard.tpl
 msgid "Print Invoice"
-msgstr ""
+msgstr "Rechnung drucken"
 
 #: templates/CRM/Contribute/Form/ContributionView.tpl
 #: templates/CRM/Contribute/Page/UserDashboard.tpl
 msgid "Print Invoice and Credit Note"
-msgstr ""
+msgstr "Rechnung und Gutschrift erzeugen "
 
 #: templates/CRM/Contribute/Form/ContributionView.tpl
 msgid "Recurring Contribution"
@@ -5207,7 +5207,7 @@ msgstr ""
 
 #: CRM/Contribute/Task.php
 msgid "Invoices - print or email"
-msgstr ""
+msgstr "Rechnungen drucke oder per E-Mail versenden"
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid "No payments found for this %1 record"
@@ -5355,7 +5355,7 @@ msgstr ""
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "LESS Credit to invoice(s)"
-msgstr ""
+msgstr "bereits geleistete Zahlungen"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "REMAINING CREDIT"
