--- a/po/de_DE/report.po
+++ b/po/de_DE/report.po
@@ -24,8 +24,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-16 08:19+0000\n"
-"Last-Translator: Ettore Atalan <atalanttore@googlemail.com>\n"
+"PO-Revision-Date: 2016-09-30 07:11+0000\n"
+"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1693,7 +1693,7 @@ msgstr ""
 
 #: CRM/Report/Info.php
 msgid "View reports"
-msgstr ""
+msgstr "Berichte ansehen"
 
 #: CRM/Report/Info.php
 msgid "access Report Criteria"
@@ -1705,15 +1705,15 @@ msgstr ""
 
 #: CRM/Report/Info.php
 msgid "administer reserved reports"
-msgstr ""
+msgstr "reservierte Berichte bearbeiten"
 
 #: CRM/Report/Info.php
 msgid "Edit all reports that have been marked as reserved"
-msgstr ""
+msgstr "Als reserviert markierte Berichte bearbeiten"
 
 #: CRM/Report/Info.php
 msgid "administer Reports"
-msgstr ""
+msgstr "Berichte bearbeiten"
 
 #: CRM/Report/Info.php
 msgid "Manage report templates"
