--- a/po/fr_CA/common-base.po
+++ b/po/fr_CA/common-base.po
@@ -27,8 +27,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-09-16 17:28+0000\n"
-"Last-Translator: Stéphane Lussier <stephane@symbiotic.coop>\n"
+"PO-Revision-Date: 2016-10-02 03:46+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -26054,7 +26054,7 @@ msgstr ""
 
 #: CRM/Utils/Check.php
 msgid "System Status: Ok"
-msgstr ""
+msgstr "État du système : OK"
 
 #: CRM/Utils/Rule.php
 msgid ""
