po: update po/ca_ES/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/member.po
+++ b/po/ca_ES/member.po
@@ -13,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-18 11:49+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2016-10-02 22:07+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1176,13 +1176,13 @@ msgstr "Font de l'afiliació. Aquest camp és cercable."
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid "When did this contact first become a member?"
-msgstr "En quina data es va afiliar aquest contacte per primera vegada?"
+msgstr "En quina data va registrar la seva pertinença aquest contacte per primera vegada?"
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid ""
 "First day of current continuous membership period. Start Date will be "
 "automatically set based on Membership Type if you don't select a date."
-msgstr "Primer dia del període actual de l'afiliciaó. Si no selecciona una data, aquesta s'establirà de forma automàtica en funció del tipus d'afiliació."
+msgstr "Primer dia del període actual de pertinença. Si no seleccioneu una data, aquesta s'establirà de forma automàtica en funció del tipus d'afiliació."
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid "Over-ride end date"
@@ -1192,14 +1192,14 @@ msgstr ""
 msgid ""
 "Latest membership period expiration date. End Date will be automatically set"
 " based on Membership Type if you don't select a date."
-msgstr "Data de finalització del període d'afiliat. Si no es selecciona una data, aquesta s'establirà de forma automàtica segons el tipus d'afiliat."
+msgstr "Data de finalització del període de pertinença. Si no seleccioneu una data, aquesta s'establirà de forma automàtica segons el tipus de pertinença."
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid ""
 "If <strong>Status Override</strong> is checked, the selected status will "
 "remain in force (it will NOT be modified by the automated status update "
 "script)."
-msgstr ""
+msgstr "Si està seleccionat <strong>Sobreescriure l'estat</strong>, l'estat seleccionat seguirà forçat (no es modificarà pel procés d'actualització d'estats automatitzat)."
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid "Membership payment amount."
@@ -1949,7 +1949,7 @@ msgid ""
 "page(s) for online membership sign-up and renewal. Administrators can create"
 " or modify Membership Types <a href='%2'>here</a>, and configure Online "
 "Contribution Pages which include membership sign-up <a href='%1'>here</a>."
-msgstr ""
+msgstr "CiviMember us permet crear tipus pertinences personalitzades com també pàgines per registres en línia i renovacions de pertinences. Els administradors poden crear o modificar tipus de pertinences <a href='%2'>aquí</a>, i configurar pàgines de contribucions en línia <a href='%1'>aquí</a> que inclouen registres de pertinences."
 
 #: templates/CRM/Member/Page/DashBoard.hlp
 msgid ""
@@ -1958,7 +1958,7 @@ msgid ""
 "commonly used search criteria. To run your own customized searches - click "
 "<a href='%1'>Find Members</a>. You can search by Member Name, Membership "
 "Type, Status, and Signup Date Ranges."
-msgstr ""
+msgstr "Aquest taula proporciona un resum de <strong>els registres de pertinences i l'activitat</strong> de renovació, i inclou dreceres per visualitzar els detalls per aquells criteris de cerca més comunament utilitzats. Per executar les vostres pròpies cerques personalitzades - cliqueu <a href='%1'>Cerca membres</a>. Podreu cercar per nom del membre, tipus de pertinença, estat i rangs de data de registre."
 
 #: templates/CRM/Member/Page/DashBoard.hlp
 msgid ""
@@ -1968,11 +1968,11 @@ msgid ""
 "to their summary page and click on the <strong>New Membership</strong> link."
 " You can also <a href=\"%2\">import batches of membership records</a> from "
 "other sources."
-msgstr ""
+msgstr "També podeu introduir i seguir registres de pertinences fora de línia. Per registrar pertinences manualment per contactes persones, utilitzeu <a href=\"%1\">Cerca contactes</a> per localitzar el contacte. Després cliqueu <strong>Visualitza</strong> per anar a la seva pàgina de resum i cliqueu a l'enllaç <strong>Nova pertinença</strong>. També podeu fer <a href=\"%2\">importacions en lot de registres de pertinences</a> provinents d'altres fonts."
 
 #: templates/CRM/Member/Page/DashBoard.hlp
 msgid "Refer to the online user guide for more information."
-msgstr ""
+msgstr "Consulteu la guia d'usuari en línia per a més informació."
 
 #: templates/CRM/Member/Page/DashBoard.tpl
 msgid "Membership Summary"
