--- a/po/fr_CA/case.po
+++ b/po/fr_CA/case.po
@@ -5,17 +5,18 @@
 # Translators:
 # lavamind <jerome@riseup.net>, 2011
 # lavamind <jerome@riseup.net>, 2011
-# Mathieu Lutfy <mathieu@bidon.ca>, 2015
+# Mathieu Lutfy <mathieu@bidon.ca>, 2015-2016
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# samuelsov <samuel@koumbit.org>, 2016
 # samuelsov <samuel@koumbit.org>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-25 16:39+0000\n"
-"Last-Translator: samuelsov <samuel@koumbit.org>\n"
+"PO-Revision-Date: 2016-10-02 20:33+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -347,8 +348,8 @@ msgstr "Dossier connexes"
 #: CRM/Case/Form/CaseView.php
 msgid "%1 Related Case"
 msgid_plural "%1 Related Cases"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Un dossier relié"
+msgstr[1] "%1 dossiers reliés"
 
 #: CRM/Case/Form/CaseView.php
 msgid "Add Activity"
@@ -356,7 +357,7 @@ msgstr "Ajouter une activité"
 
 #: CRM/Case/Form/CaseView.php
 msgid "Activity Audit"
-msgstr ""
+msgstr "Vérificaiton des activités"
 
 #: CRM/Case/Form/CaseView.php
 msgid "Add Timeline"
