--- a/po/fr_CA/contribute.po
+++ b/po/fr_CA/contribute.po
@@ -20,7 +20,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-29 16:58+0000\n"
+"PO-Revision-Date: 2016-10-02 20:34+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -386,7 +386,7 @@ msgstr "Texte du reçu"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Is Page Active?"
-msgstr ""
+msgstr "La page est-elle active ?"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Is Amount Block Active?"
@@ -571,7 +571,7 @@ msgstr ""
 
 #: CRM/Contribute/DAO/Product.php CRM/Contribute/Form/ManagePremiums.php
 msgid "Duration Unit"
-msgstr ""
+msgstr "Unité de durée"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Url Logo"
