po: update po/ca_ES/common-components.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/common-components.po
+++ b/po/ca_ES/common-components.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-09-13 09:40+0000\n"
+"PO-Revision-Date: 2016-10-03 14:18+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -2096,11 +2096,11 @@ msgstr "Nom del mailing"
 #: CRM/Mailing/Event/DAO/Bounce.php CRM/Mailing/Selector/Event.php
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "Bounce Reason"
-msgstr "Raó de rebot"
+msgstr "Motiu del retorn"
 
 #: CRM/Mailing/Selector/Event.php CRM/Report/Form/Mailing/Bounce.php
 msgid "Bounce Type"
-msgstr "Tipus de rebot"
+msgstr "Tipus de retorn"
 
 #: CRM/Mailing/Selector/Event.php templates/CRM/Mailing/Page/Report.tpl
 #: CRM/Report/Form/Register.php templates/CRM/Report/Page/Options.tpl
