--- a/po/ca_ES/drupal-civicrm.po
+++ b/po/ca_ES/drupal-civicrm.po
@@ -11,8 +11,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2016-08-18 11:22+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2016-10-03 14:19+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2101,7 +2101,7 @@ msgstr ""
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Date of bounce"
-msgstr "Data de rebot"
+msgstr "Data de retorn"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Date user e-mail bounced"
@@ -2109,11 +2109,11 @@ msgstr ""
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Mailing bounced ID"
-msgstr ""
+msgstr "Identificador del mailing retornat"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The numeric ID of the bounce record"
-msgstr ""
+msgstr "L'identificador numèric del registre retornat"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Reason"
@@ -2121,7 +2121,7 @@ msgstr "Motiu"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Reason the e-mail bounced"
-msgstr ""
+msgstr "Motiu del correu electrònic retornat"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "CiviCRM Mailing  Delivered"
