--- a/po/ca_ES/report.po
+++ b/po/ca_ES/report.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-18 11:22+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2016-10-03 14:20+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1187,11 +1187,11 @@ msgstr "El informe \"%1\" ha estat creat amb èxit. Actualment esteu veient una 
 
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "Bounce Count"
-msgstr "Comptador de rebots"
+msgstr "Comptador de retorns"
 
 #: CRM/Report/Form/Mailing/Bounce.php CRM/Report/Form/Mailing/Summary.php
 msgid "Bounce"
-msgstr "Rebot"
+msgstr "Retorn"
 
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "Mail Bounce: %1"
@@ -1251,7 +1251,7 @@ msgstr "Índex d'acceptament"
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Bounce Rate"
-msgstr "Índex de rebots"
+msgstr "Índex de retorns"
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Confirmed Open Rate"
@@ -2187,7 +2187,7 @@ msgstr ""
 
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "Bounce Date"
-msgstr ""
+msgstr "Data del retorn"
 
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "On hold"
