po: update po/ca_ES/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/common-base.po
+++ b/po/ca_ES/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-09-13 09:46+0000\n"
+"PO-Revision-Date: 2016-10-03 14:23+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -3258,7 +3258,7 @@ msgstr "El correu electrònic no és vàlid"
 
 #: CRM/Contact/Form/Edit/Email.php
 msgid "On Hold Bounce"
-msgstr "Rebot bloquejat"
+msgstr "Retorn bloquejat"
 
 #: CRM/Contact/Form/Edit/Email.php
 msgid "On Hold Opt Out"
@@ -12719,7 +12719,7 @@ msgstr "Missatge d'error:"
 
 #: CRM/Utils/Mail/EmailProcessor.php
 msgid "We could not extract the mail body from this bounce message."
-msgstr "No hem pogut extreure el cos del correu electrònic d'aquest missatge rebotat."
+msgstr "No hem pogut extreure el cos del correu electrònic d'aquest missatge retornat."
 
 #: CRM/Utils/Mail/Incoming.php
 msgid "No clue about the %1"
@@ -13077,7 +13077,7 @@ msgstr "Mou a sota"
 
 #: ang/crmApp.js
 msgid "Unknown path"
-msgstr ""
+msgstr "Camí desconegut"
 
 #: ang/crmAttachment/attachments.html
 msgid "Deleting an attachment will completely remove it from server."
@@ -14433,7 +14433,7 @@ msgid ""
 "long as it is marked hold. You can also set (or unset) this option manually "
 "- but remember that emails will not be sent to this address as long as it is"
 " marked 'On Hold'."
-msgstr "Aquest indicador és més utilitzat habitualment per indicar una adreça de correu electrònic que està rebotant. Si esteu utilitzant el component CiviMail, els correus electrònics que reboten en excés automàticament es situen com a bloquejats i no s'envien més mailings en aquesta adreça mentre segueixi marcat com a bloquejat. També podeu configurar (o desconfigurar) aquesta opció manualment - però recordeu que els correus electrònics no s'enviaran a aquesta adreça, sempre que estigui marcada com a \"Bloquejat\"."
+msgstr "Aquest indicador és més utilitzat habitualment per indicar una adreça de correu electrònic que està retornant. Si esteu utilitzant el component CiviMail, els correus electrònics que retornen en excés automàticament es situen com a bloquejats i no s'envien més mailings en aquesta adreça mentre segueixi marcat com a bloquejat. També podeu configurar (o desconfigurar) aquesta opció manualment - però recordeu que els correus electrònics no s'enviaran a aquesta adreça, sempre que estigui marcada com a \"Bloquejat\"."
 
 #: templates/CRM/Contact/Form/Contact.hlp
 msgid "Preferred Communication"
@@ -21796,7 +21796,7 @@ msgstr "Informe de correus electrònics rebotats "
 
 #: xml/templates/civicrm_data.tpl
 msgid "Bounce Report for mailings"
-msgstr "Informe de bots per mailings"
+msgstr "Informe de rebots per mailings"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Mail Summary Report"
@@ -25761,7 +25761,7 @@ msgstr ""
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "A default mailbox must be configured for email bounce processing."
-msgstr ""
+msgstr "S'ha de configurar per defecte un compte de correu electrònic per al processament de rebots de correus electrònics."
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "Learn more in the <a %1>online documentation</a>."
