--- a/po/ca_ES/admin.po
+++ b/po/ca_ES/admin.po
@@ -16,7 +16,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-09-19 19:23+0000\n"
+"PO-Revision-Date: 2016-10-03 14:20+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -280,7 +280,7 @@ msgstr ""
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Bounce Processing"
-msgstr "Processament de rebots"
+msgstr "Processament de retorns"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Email-to-Activity Processing"
@@ -5172,7 +5172,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Bounce Processing <strong>(Default)</strong>"
-msgstr "Processament de rebots <strong>(Predeterminat)</strong>"
+msgstr "Processament de retorns <strong>(Predeterminat)</strong>"
 
 #: templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Email-to-Activity"
