po: update po/ca_ES/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/menu.po
+++ b/po/ca_ES/menu.po
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-22 15:02+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2016-10-03 14:18+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2096,12 +2096,12 @@ msgstr "Informe d'estadistiques de subvencions"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Mail Bounces"
-msgstr "Correus electrònics rebotats"
+msgstr "Correus electrònics retornats"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Bounce Report for mailings"
-msgstr "Informe de rebots per mailings"
+msgstr "Informe de retorns per mailings"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
