--- a/po/fr_CA/common-base.po
+++ b/po/fr_CA/common-base.po
@@ -27,7 +27,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-10-02 03:46+0000\n"
+"PO-Revision-Date: 2016-10-03 15:09+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -17078,7 +17078,7 @@ msgstr "Date de décès"
 
 #: templates/CRM/Contact/Page/Inline/Demographics.tpl
 msgid "Age"
-msgstr "Age"
+msgstr "Âge"
 
 #: templates/CRM/Contact/Page/Inline/Demographics.tpl
 msgid "%count year"
