--- a/po/fr_CA/contribute.po
+++ b/po/fr_CA/contribute.po
@@ -20,7 +20,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-10-02 20:34+0000\n"
+"PO-Revision-Date: 2016-10-03 14:49+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -3470,7 +3470,7 @@ msgstr "Si vous désactivez cette option, les contributions seront traitées imm
 msgid ""
 "When your page is active, you can link people to the page by copying and "
 "pasting the following URL:"
-msgstr "Lorsque la page sera active, vous pourrez y référer des gens en copiant/collant l'URL qui suit:"
+msgstr "Lorsque la page sera active, vous pourrez en faire la promotion en utilisant ce lien :"
 
 #: templates/CRM/Contribute/Form/ContributionPage/Settings.tpl
 msgid ""
