po: update po/sv_SE/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/common-base.po
+++ b/po/sv_SE/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-10-02 22:47+0000\n"
+"PO-Revision-Date: 2016-10-03 10:05+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -3831,7 +3831,7 @@ msgstr "Primär"
 #: CRM/Contact/Form/Search/Criteria.php CRM/Core/SelectValues.php
 #: templates/CRM/Contact/Page/View/GroupContact.tpl
 msgid "Added"
-msgstr "Lagts till"
+msgstr "Tillagd"
 
 #: CRM/Contact/Form/Search/Criteria.php
 msgid "Modified"
@@ -4401,7 +4401,7 @@ msgstr ""
 
 #: CRM/Contact/Form/Task/AlterPreferences.php
 msgid "Removed '%1'"
-msgstr ""
+msgstr "Tog bort '%1'"
 
 #: CRM/Contact/Form/Task/AlterPreferences.php
 msgid "%1 Contacts Updated"
@@ -4841,8 +4841,8 @@ msgstr "Ta bort från grupp"
 #: CRM/Contact/Form/Task/RemoveFromGroup.php
 msgid "%count contact removed from '%2'"
 msgid_plural "%count contacts removed from '%2'"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%count kontakt togs bort från '%2'"
+msgstr[1] "%count kontakter togs bort från '%2'"
 
 #: CRM/Contact/Form/Task/RemoveFromGroup.php
 msgid "1 contact was already not in this group"
@@ -4853,8 +4853,8 @@ msgstr[1] ""
 #: CRM/Contact/Form/Task/RemoveFromGroup.php
 msgid "Removed Contact From Group"
 msgid_plural "Removed Contacts From Group"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Tog bort kontakt från grupp"
+msgstr[1] "Tog bort kontakter från grupp"
 
 #: CRM/Contact/Form/Task/RemoveFromTag.php
 msgid "Remove Tags from Contacts"
@@ -15236,7 +15236,7 @@ msgstr ""
 
 #: templates/CRM/Contact/Form/Search/Advanced.hlp
 msgid "Target Contact Group"
-msgstr ""
+msgstr "Målkontakt(er) i grupp"
 
 #: templates/CRM/Contact/Form/Search/Advanced.hlp
 msgid ""
@@ -15244,7 +15244,7 @@ msgid ""
 "contacts are part of a specific group or groups. For example, you might want"
 " to find all individuals who are employees ('Employee of' relationship type)"
 " of organizations which are in your 'Corporate Sponsors' group."
-msgstr ""
+msgstr "Använd det här filtret för att begränsa sökningen till relationer där målkontakten, kontakten som relationen går till, finns i en specific grupp eller grupper. Till exempel kan du hitta alla personer som är anställda på ('Anställd på'-relationen) organisationer som finns i gruppen 'Företagssponsorer'."
 
 #: templates/CRM/Contact/Form/Search/Advanced.hlp
 msgid ""
@@ -17275,7 +17275,7 @@ msgstr "Tillagd (av %1)"
 #: templates/CRM/Contact/Page/View/GroupContact.tpl
 msgid ""
 "Remove %1 from %2? (status in this group will be changed to 'Removed')."
-msgstr ""
+msgstr "Ta bort %1 från %2? (status kommer att ändras till 'Borttagen')."
 
 #: templates/CRM/Contact/Page/View/GroupContact.tpl
 #: templates/CRM/UF/Page/ProfileTemplates.tpl
@@ -25008,7 +25008,7 @@ msgstr ""
 
 #: CRM/Contact/Task.php
 msgid "Group - remove contacts"
-msgstr ""
+msgstr "Grupp - tag bort kontakterna"
 
 #: CRM/Contact/Task.php
 msgid "Tag - add to contacts"
