po: update po/sv_SE/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/mailing.po
+++ b/po/sv_SE/mailing.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-09-26 10:00+0000\n"
+"PO-Revision-Date: 2016-10-03 09:56+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -1520,7 +1520,7 @@ msgstr ""
 msgid ""
 "This mailing was generated based on search results. The search results "
 "cannot be removed."
-msgstr ""
+msgstr "Detta utskick genererades baserat på en sökning. Sökresultaten kan inte tas bort."
 
 #: ang/crmMailing/SaveMsgTemplateDialogCtrl.html
 msgid "Save the current mailing as a template."
