po: update po/sv_SE/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/event.po
+++ b/po/sv_SE/event.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-24 08:00+0000\n"
+"PO-Revision-Date: 2016-10-04 06:28+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -3477,7 +3477,7 @@ msgstr "Sidan listar alla anmälningar till arrangemang för %1 sedan starten."
 msgid ""
 "Click <a %1>Add Event Registration</a> to register this contact for an "
 "event."
-msgstr ""
+msgstr "Du kan <a %1>anmäla denna kontakt till ett arrangemang</a>."
 
 #: templates/CRM/Event/Page/Tab.tpl
 msgid ""
