po: update po/bn_BD/countries.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/bn_BD/countries.po
+++ b/po/bn_BD/countries.po
@@ -6,8 +6,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-08 17:05-0400\n"
-"PO-Revision-Date: 2016-05-08 22:32+0000\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-05 15:41+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Bengali (Bangladesh) (http://www.transifex.com/civicrm/civicrm/language/bn_BD/)\n"
 "MIME-Version: 1.0\n"
@@ -1042,4 +1042,24 @@ msgstr ""
 
 msgctxt "country"
 msgid "Saint Martin (French part)"
+msgstr ""
+
+msgctxt "country"
+msgid "Virgin Islands,British"
+msgstr ""
+
+msgctxt "country"
+msgid "Côte d’Ivoire"
+msgstr ""
+
+msgctxt "country"
+msgid "Iran, Islamic Republic Of"
+msgstr ""
+
+msgctxt "country"
+msgid "Macedonia, Republic Of"
+msgstr ""
+
+msgctxt "country"
+msgid "Palestinian Territory"
 msgstr ""
