--- a/po/ca_ES/case.po
+++ b/po/ca_ES/case.po
@@ -11,9 +11,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-18 11:22+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-05 15:47+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1135,6 +1135,10 @@ msgstr ""
 #: CRM/Case/Task.php
 msgid "Restore cases"
 msgstr ""
+
+#: CRM/Case/Task.php
+msgid "Print/merge Document"
+msgstr "Imprimeix/combina un document"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Homeless Services Coordinator is"
